--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ cache: pip
 install:
   - pip install -r requirements.txt
 script:
-  - python manage.py test
+  - coverage run manage.py test
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
